added sample users model
